fix media not showing up

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,9 @@
+html {
+    height: 100%;
+}
 body {
     margin-top: 68px;
+    background: url('/media/main-bg.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 100vh;
 }
